<resources>
    <string name="app_name">Asscky</string>
    <string name="sign_in_text" translatable="true">Sign In</string>
    <string name="sign_up_text" translatable="true">Sign Up</string>
    <string name="title_activity_login_activty">Sign in</string>
    <string name="email_hint">E-mail Address</string>
    <string name="password_hint">Password</string>
    <string name="signed_out_toast">You have been signed out.</string>
    <string name="club_information_office_location">Office Location</string>
    <string name="club_information_hours">Hours</string>
    <string name="club_information_contact_info">Contact information</string>

    <!--Dialog strings-->
    <string name="dialog_error_title">Seems like there was a problem</string>
    <string name="dialog_no_network_message">Seems like you are not connected to the internet</string>
    <string name="dialog_settings">Open settings</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_okay">Okay</string>
    <string name="progress_bar_creating_account">Creating Account...</string>
    <string name="progress_bar_authenticating">Authenticating...</string>
    <string name="progress_bar_please_wait">Please wait... </string>
    <string name="progress_bar_creating_your_board">Creating your new board.</string>
    <string name="progress_bar_will_take_a_second">This will take a few seconds.</string>
    <string name="progress_bar_joining_board">Joining the board.</string>
    <string name="progress_bar_sending_text">Sending your message.</string>


    <!--Error Strings -->
    <string name="error_validator_email">Enter a valid email address.</string>
    <string name="error_validator_password">Enter 4 and 10 alphanumeric characters.</string>
    <string name="auth_failed_to_create">Failed to create account. Please try again.</string>
    <string name="auth_failed_to_login">Failed to login to the account. Please try again.</string>
    <string name="error_board_description_empty">Please enter a board description.</string>
    <string name="error_board_title_empty">You board must have a title.</string>
    <string name="error_unable_to_create_board">Failed to create a board. Please try again.</string>
    <string name="error_board_number_missing">Please Enter a board number</string>
    <string name="error_incomplete_number">Please enter the 6 digit board number.</string>
    <string name="error_board_doesnt_exist">Seems like the board doesn\'t exist. Try again.</string>
    <string name="error_unable_send_message">Failed to send your message. Please try again.</string>

    <!--Menu Strings-->
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_home_page">Project Unify</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="menu_quite_board">Quit Board</string>


    <!--Fragment Names-->
    <string name="fragment_title_create_board">Create a Board</string>
    <string name="fragment_title_join_board">Join a Board</string>
    <string name="fragment_title_profile">Profile</string>

    <!--Placeholder texts-->
    <string name="placeholder_news_feed_club_name">de Finibus Bonorum</string>
    <string name="placeholder_news_feed_club_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_email">youremail@domain.com</string>

    <!--Create board fragment-->
    <string name="label_board_info">Board Info</string>
    <string name="hint_board_title">Board Title</string>
    <string name="hint_board_description">Description</string>
    <string name="create_board_button">Create Board</string>
    <string name="hint_additional_notes">Notes(Optional)</string>
    <string name="board_reference">boards</string>
    <string name="user_reference">user</string>

    <!--Join a board-->
    <string name="enter_board_number">Please enter the board number.</string>

    <!--board Activity-->
    <string name="quit_board_successfully">You have successfully quit the board.</string>
    <string name="label_board_number">Board Number: </string>
    <string name="label_board_title">Title : </string>
    <string name="join_board_button">Join Board</string>
    <string name="join_board_char_hint_number">1</string>
    <string name="join_board_char_hint_alphabet">a</string>
    <string name="send_message">Send</string>
    <string name="exit_press_back_twice_message">Press the back button twice to exit the board.</string>

    <!--Profile fragment-->
    <string name="label_board">Boards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
